--- a/index.html
+++ b/index.html
@@ -1882,7 +1882,7 @@
 "name": "KING403",
 "alternateName": "Bandar Slot Terpercaya",
 "url": "https://www.aviacommerce.org/",
-"logo": "hhttps://www.aviacommerce.org/images/logo_king403.png",
+"logo": "https://www.aviacommerce.org/images/logo_king403.png",
 "description": "KING403 adalah situs toto Slot online yang dipercaya semua orang. Ini adalah pilihan pertama untuk pecinta Slot di Indonesia.",
 "address": {
 "@type": "PostalAddress",
@@ -1994,7 +1994,7 @@
                             <a itemprop="url" href="https://www.aviacommerce.org/" title="KING403">
                                 <a href="https://www.aviacommerce.org/" title="KING403">
                                     <amp-img
-                                        src="hhttps://www.aviacommerce.org/images/logo_king403.png"
+                                        src="https://www.aviacommerce.org/images/logo_king403.png"
                                         alt="KING403" width="150" height="44" />
                                 </a>
                                 <meta itemprop="name" content="KING403">
@@ -2016,7 +2016,7 @@
                             <a itemprop="url" href="https://www.aviacommerce.org/" title="KING403">
                                 <a href="https://www.aviacommerce.org/" title="KING403">
                                     <amp-img
-                                        src="hhttps://www.aviacommerce.org/images/logo_king403.png"
+                                        src="https://www.aviacommerce.org/images/logo_king403.png"
                                         alt="KING403 # Situs Toto Slot Resmi Dan Bandar Slot Online Terpercaya Amanah" width="300"
                                         height="78" layout="responsive" />
                                 </a>
