--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="KING403 adalah situs toto Slot online yang dipercaya semua orang. Ini adalah pilihan pertama untuk pecinta Slot di Indonesia." />
     <meta name="keywords"
         content="king403, king 403, situs king 403, situs slot king, king slot , daftar king403" />
+	<meta name="google-site-verification" content="9nX_-F3zPOWOwUvkgmJMkCkJ927bc44jJgsRPUdED68" />
     <meta name="page google.com" content="https://www.google.com/search?q=King403">
     <meta name="page google.co.id" content="https://www.google.co.id/search?q=King403">
     <meta name="page google.com" content="https://www.google.com/search?q=king+slot">
